@@ -1,3 +1,8 @@
+2008-02-12  Ross Burton  <ross@openedhand.com>
+
+	* matchbox-panel/mb-panel-scaling-image.c:
+	Reload the icon on size allocation.
+
 2008-02-08  Ross Burton  <ross@openedhand.com>
 
 	* applets/notify/mb-notification.[ch]:
